# WildlifeMapper

./: .gitignore  BACKBONE_GUIDE.md  CLAUDE.md  README.md  data.dvc  download_sam_checkpoint.sh  fix_class_ids.py  main.py  pyproject.toml  requirements.txt
coco_annotations/: test.json  train.json  val.json
conf/: config.yaml  config_backbone_example.yaml  inference_config.yaml  train_config.yaml
conf/backbone/: resnet101_fpn.yaml  resnet50_fpn.yaml  vit_b.yaml  vit_h.yaml  vit_l.yaml
conf/data_augmentation/: aerial_optimized.yaml  aggressive.yaml  basic.yaml  standard.yaml
conf/dataset/: default.yaml
conf/inference/: default.yaml
conf/loss/: class_weights.yaml
conf/model/: vit_b.yaml  vit_h.yaml  vit_l.yaml
conf/training/: default.yaml
docs/: Propuesta_Proyecto_Vision.docx  Propuesta_Proyecto_Vision.md
notebooks/: raw-data.ipynb
tools/: inference.py  patcher.py
tools/data/images/: visualize_bounding_boxes.py  (+1 more)
tools/importers/: bbox_to_coco.py
wildlifemapper/: csv_to_coco.py  dataloader_coco.py  distributed_run.sh  run.sh  run_with_wandb.sh  train.py  train_herdnet.sh  train_hydra.py  train_hydra_backbone.py  visualize_prediction.py  wandb_logger.py
wildlifemapper/data/: __init__.py  annotations.py  enhanced_dataloader.py  patches.py  samplers.py  transforms.py
wildlifemapper/inference/: __init__.py  infer.py
wildlifemapper/models/: __init__.py  grid_detector.py  wildlife_mapper.py
wildlifemapper/segment_anything/: build_sam.py
wildlifemapper/train/: __init__.py  trainer.py
wildlifemapper/utils/: focal_loss.py
(+10 files in other folders)
