[project]
name = "wildlifemapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "opencv-python>=4.12.0.88",
    "pycocotools>=2.0.10",
    "scipy>=1.16.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.6",
]
